--- a/index.html
+++ b/index.html
@@ -483,12 +483,25 @@
             </div>
             <div class="village-img"  style="background-image: url('assets/img/Lang-nghe/Khamphahue-NgheQuatGiay_LeVanMinh_25_12_2024_16_47_14_885_CH.jpg')"></div>
         </div>
+        <div class="village-item-reverse">
+            <div class="village-content">
+                <div class="village-name">LÀNG GỐM PHƯỚC TÍCH</div>
+                <p class="village-info">Gốm Phước Tích được làm từ đất sét và nung theo phương pháp truyền thống.
+                    Sản phẩm nổi bật nhờ độ bền, tính độc đáo và đa dạng màu sắc. Mỗi món gốm mang vẻ đẹp riêng,
+                    có lớp men nổi đặc trưng sau khi nung, tạo nên sự bền chắc và sang trọng.
+                </p>
+                <button class="btn-more bg-red-corners">Xem thêm</button>
+            </div>
+            <div class="village-img" style="background-image: url('assets/img/Lang-nghe/Gom-Phuoc-Tich.jpg')"></div>
+        </div>
     </div>
 </div>
 
 <!-- Lala -->
  <!-- Địa điem du lịch -->
     <div class="dia-diem-du-lich ">
+        <h1 class="title">Địa danh</h1>
+        <div class="line"></div>
         <div class="map">
             <div class="list-control-map">
                 <i class="fas fa-info icon-info"></i>
