--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="menu container">
         <img src="assets/img/Background/bg-header-real.png" alt="Left Decor" class="logo-left">
-        <img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo">
+        <a href="#"><img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo"></a>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
         <div class="nav-links" id="nav-links">
             <a href="#" class="bg-red-corners only-mobile-reset" id="gioithieu" ><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Giới thiệu</a>
