--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#"><img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo"></a>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
         <div class="nav-links" id="nav-links">
-            <a href="#" class="bg-red-corners only-mobile-reset" id="gioithieu" ><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Giới thiệu</a>
+            <a href="#" class="only-mobile-reset"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Giới thiệu</a>
             <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Sự kiện</a>
             <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Làng nghề</a>
             <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Ẩm thực</a>
