--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <a href="#"><img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo"></a>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
         <div class="nav-links" id="nav-links">
-            <a href="#" class="only-mobile-reset"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Giới thiệu</a>
-            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Sự kiện</a>
-            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Làng nghề</a>
-            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Ẩm thực</a>
-            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Nghệ thuật</a>
-            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 6px; font-size: 16px;"></i>Địa danh</a>
+            <a href="#" class="only-mobile-reset">Giới thiệu</a>
+            <a href="#">Sự kiện</a>
+            <a href="#">Làng nghề</a>
+            <a href="#">Ẩm thực</a>
+            <a href="#">Nghệ thuật</a>
+            <a href="#">Địa danh</a>
         </div>
 
         <img src="assets/img/Background/bg-header.png" alt="Right Decor" class="logo-right">
