rename Dia Danh

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
  <!-- Địa điem du lịch -->
     <div class="dia-diem-du-lich ">
         <div class="header-section container">
-            <h1>Địa điểm</h1>
+            <h1>Địa Danh</h1>
             <hr class="text--decor">
         </div>
         <div class="map">
