--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="menu container">
         <img src="assets/img/Background/bg-header-real.png" alt="Left Decor" class="logo-left">
-        <a href="#"><img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo"></a>
+        <a href="#" class="logo-link"><img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo"></a>
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
         <div class="nav-links" id="nav-links">
             <a href="#" class="only-mobile-reset">Giới thiệu</a>
