--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                     }
     
                     .section-art .artmenu-wrapper>div.active .row.active {
-                        display: block;
+                        display: flex;
                     }
     
                     .section-art .artmenu-wrapper>div article img {
