them link lang nghe

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     mà còn là điểm du lịch thu hút với sắc màu rực rỡ và không gian yên bình.</p>
 
                 <div class="btn" style="margin: 0px;">
-                    <a class="btn-more bg-red-corners">Xem thêm</a>
+                    <a class="btn-more bg-red-corners" href="https://khamphahue.com.vn/Du-lich/Chi-tiet/tid/Lang-huong-tram-Thuy-Xuan.html/pid/142/cid/323" target="_blank">Xem thêm</a>
                 </div>
             </div>
             <div class="village-img" style="background-image: url('assets/img/Lang-nghe/lang-huong-thuy-xuan.jpg')"></div>
@@ -531,7 +531,7 @@
                     chọn lá, chuốt tre, chằm lá đến phơi nắng, nón Tây Hồ tinh mảnh, nhẹ, màu nhã và chứa đựng hồn thơ xứ Huế.
                 </p>
                 <div class="btn" style="margin: 0px;">
-                    <a class="btn-more bg-red-corners">Xem thêm</a>
+                    <a class="btn-more bg-red-corners" href="https://vnexpress.net/lang-nghe-lam-non-hue-2878895.html" target="_blank">Xem thêm</a>
                 </div>
             </div>
             <div class="village-img" style="background-image: url('assets/img/Lang-nghe/du-lich-Lang-non-tay-ho-hue-mytour-3.jpg')"></div>
@@ -544,7 +544,7 @@
                     âm thầm được duy trì. Những chiếc quạt không chỉ là vật dụng mà còn mang giá trị nghệ thuật
                     tinh tế. Tất cả được kết tinh từ đôi bàn tay khéo léo của người thợ Huế.</p>
                 <div class="btn" style="margin: 0px;">
-                    <a class="btn-more bg-red-corners">Xem thêm</a>
+                    <a class="btn-more bg-red-corners" href="https://khamphahue.com.vn/Van-hoa/Hue-Xu-so-Mai-Vang-Viet-Nam/Chi-tiet/tid/Nghe-lam-quat-giay-Pho-co-Bao-Vinh.html/pid/17756/cid/323" target="_blank">Xem thêm</a>
                 </div>
             </div>
             <div class="village-img"  style="background-image: url('assets/img/Lang-nghe/Khamphahue-NgheQuatGiay_LeVanMinh_25_12_2024_16_47_14_885_CH.jpg')"></div>
@@ -557,7 +557,7 @@
                     có lớp men nổi đặc trưng sau khi nung, tạo nên sự bền chắc và sang trọng.
                 </p>
                 <div class="btn" style="margin: 0px;">
-                    <a class="btn-more bg-red-corners">Xem thêm</a>
+                    <a class="btn-more bg-red-corners" href="https://khamphahue.com.vn/Van-hoa/Chi-tiet/tid/Lang-nghe-Gom-Phuoc-Tich.html/pid/15886/cid/323" target="_blank">Xem thêm</a>
                 </div>
             </div>
             <div class="village-img" style="background-image: url('assets/img/Lang-nghe/Gom-Phuoc-Tich.jpg')"></div>
